# ppa-for-industries

./: .gitignore  README.md  ppa_builder.py  pyproject.toml  run_full_simulation.py
ppa-simulator/: simulator.py
ppa_simulator/: __main__.py  db_handler.py  models.py  simulator.py
src/: __init__.py  __main__.py  db_handler.py  models.py  simulator.py
